# llm-serving-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: baseline_20260510_141516.jsonl  cont_vs_static_raw_20260605_215613.jsonl  cont_vs_static_summary_20260605_215613.json  server_benchmark_raw_20260514_164724.jsonl  server_benchmark_summary_20260514_164724.json
docs/: PROGRESS.md
experiments/: paged_attention_toy.py
scripts/: benchmark_baseline.py  benchmark_continuous_vs_static.py  benchmark_server.py  interactive_chat.py  smoke_test_continuous_batcher.py
src/server/: app.py  batcher.py  continuous_batcher.py
