[project]
name = "llm-serving-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.13.0",
    "numpy>=2.4.3",
    "rich>=15.0.0",
    "torch>=2.6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
