[project]
name = "llm-serving-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.1",
    "hf-transfer>=0.1.9",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=1.14.0",
    "ipython>=9.13.0",
    "numpy>=2.4.3",
    "rich>=15.0.0",
    "torch>=2.6.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
